@@ -9,7 +9,7 @@ import org.lwjgl.input.Keyboard;
 import java.io.IOException;
 
 @SuppressWarnings({"CallToPrintStackTrace", "RedundantArrayCreation"})
-public class LoginGui extends GuiScreen {
+public final class LoginGui extends GuiScreen {
 
     private GuiTextField username;
     private static final AlyaFontRenderer FONT_MD = Alya.getInstance().getFontRendererMedium();
@@ -21,17 +21,21 @@ public class LoginGui extends GuiScreen {
                 this.mc.displayGuiScreen(new LoginGui());
             } else {
                 SessionChanger.getInstance().setUserOffline(this.username.getText());
-                this.mc.displayGuiScreen(new GuiMainMenu());
+                AltStorage.getInstance().addAlt(AltEntry.cracked(this.username.getText()));
+                this.mc.displayGuiScreen(new AltManagerGui());
             }
         }
     }
 
     @Override
-    public void drawScreen(int mouseX, int mouseY, float partialTicks) {
+    public void drawScreen(final int mouseX, final int mouseY, final float partialTicks) {
         this.drawDefaultBackground();
-
         this.username.drawTextBox();
-        FONT_MD.drawString("Alya Portal - Cracked", (float) this.width / 2 - FONT_MD.getStringWidth("Alya Portal - Cracked") / 2, Math.round((float) this.height / 2 - 80), -1);
+        FONT_MD.drawString(
+                "client Portal - Cracked",
+                (float) this.width / 2 - FONT_MD.getStringWidth("client Portal - Cracked") / 2,
+                Math.round((float) this.height / 2 - 80),
+                -1);
         super.drawScreen(mouseX, mouseY, partialTicks);
     }
 
@@ -39,8 +43,23 @@ public class LoginGui extends GuiScreen {
     public void initGui() {
         final ScaledResolution sr = new ScaledResolution(this.mc);
         this.buttonList.clear();
-        this.buttonList.add(new GuiButton(0, this.width / 2 - 50 - 10, this.height / 2 - 20, 120, 20, I18n.format("Login", new Object[0])));
-        (this.username = new GuiTextField(100, this.fontRendererObj, this.width / 2 - 50 - 10, sr.getScaledHeight() / 2 - 50, 120, 20)).setFocused(true);
+        this.buttonList.add(
+                new GuiButton(
+                        0,
+                        this.width / 2 - 50 - 10,
+                        this.height / 2 - 20,
+                        120,
+                        20,
+                        I18n.format("Login", new Object[0])));
+        (this.username =
+                new GuiTextField(
+                        100,
+                        this.fontRendererObj,
+                        this.width / 2 - 50 - 10,
+                        sr.getScaledHeight() / 2 - 50,
+                        120,
+                        20))
+                .setFocused(true);
         Keyboard.enableRepeatEvents(true);
     }
 
@@ -55,7 +74,7 @@ public class LoginGui extends GuiScreen {
             this.username.setFocused(true);
         }
         if(character == '\r') {
-            this.actionPerformed(this.buttonList.get(0));
+            this.actionPerformed(this.buttonList.getFirst());
         }
         this.username.textboxKeyTyped(character, key);
     }
@@ -64,8 +83,8 @@ public class LoginGui extends GuiScreen {
     public void mouseClicked(final int x2, final int y2, final int button) {
         try {
             super.mouseClicked(x2, y2, button);
-        } catch(IOException e) {
-            e.printStackTrace();
+        } catch(final IOException ioException) {
+            ioException.printStackTrace();
         }
         this.username.mouseClicked(x2, y2, button);
     }
